testsuite/tests/deriving/should_fail/T12512.stderr

T12512.hs:10:1: error:
    • Can't make a derived instance of ‘Wat1 (# a, b #)’:
        ‘Wat1’ is not a stock derivable class (Eq, Show, etc.)
        Try enabling DeriveAnyClass
    • In the stand-alone deriving instance for ‘Wat1 (# a, b #)’

T12512.hs:13:1: error:
    • Can't make a derived instance of ‘Wat2 (# a | b #)’:
        ‘Wat2’ is not a stock derivable class (Eq, Show, etc.)
        Try enabling DeriveAnyClass
    • In the stand-alone deriving instance for ‘Wat2 (# a | b #)’
